@@ -5,7 +5,7 @@
     ##.Call( "check_libprotobuf_version", minversion, PACKAGE = "RProtoBuf" )
     readProtoFiles( package=pkgname, lib.loc=libname )
     attachDescriptorPool( pos = length(search()) )
-    options("int64AsString" = FALSE)
+    options("RProtoBuf.int64AsString" = FALSE)
     if( exists( ".httpd.handlers.env", asNamespace( "tools" ) ) ){
         e <- tools:::.httpd.handlers.env
         e[["RProtoBuf"]] <- RProtoBuf.http.handler
